<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activities.SubmitActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/back_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:tint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.100000024"
                    app:srcCompat="@drawable/abc_vector_test"
                    tools:ignore="PrivateResource" />

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:background="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back_imageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gads_header" />

            <TextView
                    android:id="@+id/project_submission_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_project_submission"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#F9A825"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#FBC02D"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/project_submission_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:id="@+id/relLayout"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="wrap_content"
                android:id="@+id/firstName"
                android:width="150dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/text_input_border"
                android:hint="@string/first_name"
                android:layout_height="40dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:id="@+id/lastName"
                android:hint="@string/last_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:width="180dp"
                android:background="@drawable/text_input_border"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/firstName"
                android:layout_height="40dp"/>

    </RelativeLayout>

    <EditText
            android:layout_width="match_parent"
            android:id="@+id/emailAddress"
            android:layout_marginStart="16dp"
            android:hint="@string/email_address"
            android:background="@drawable/text_input_border"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/relLayout"
            android:layout_height="40dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <EditText
            android:layout_width="match_parent"
            android:id="@+id/project_link"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/text_input_border"
            app:layout_constraintTop_toBottomOf="@id/emailAddress"
            android:layout_marginTop="50dp"
            android:hint="@string/project_on_github_link"
            android:layout_height="40dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button
            android:layout_width="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_project"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/yellow_rounded_button"
            app:layout_constraintTop_toBottomOf="@id/project_link"
            android:layout_height="40dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>